--- a/proyecto/frontend/docker-compose.yml
+++ b/proyecto/frontend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.9'
 
 services:
   frontend:
@@ -7,9 +7,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    volumes:
+      - ./src:/app
+      - /app/node_modules
+    stdin_open: true
+    tty: true
     environment:
       - VITE_APP_BACKEND_API=http://backend:8081
       - VITE_APP_FRONTEND_URL=http://localhost:8080
-    volumes:
-      - ./src:/app
-    command: npm run dev
